<resources>
    <string name="app_name">SAR Calendar</string>
    <string name="title_calendar_2026">SAR Calendar</string>
    <string name="note_saved">Note saved!</string>
    <string name="note_hint">Enter note here...</string>
    <string name="save_note">Add Notes</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="expense_type">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="label_daily">Daily</string>
    <string name="label_today">Today</string>
    <string name="label_weekly">Weekly</string>
    <string name="label_monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="all_expenses">All</string>
    <string name="menu_remove_ads">Remove Ads</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_account_summary">Account Summary</string>
    <string name="menu_transaction_all_accounts">Transaction-All Accounts</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_report_all_accounts">Report-All Accounts</string>
    <string name="menu_transaction_names">Transaction Names</string>
    <string name="menu_notebook">Notebook</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_cash_calculator">Cash Calculator</string>
    <string name="menu_backup_restore">Backup and Restore</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_deleted_transactions">Deleted Transactions</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="add_accounts_title">Add Accounts</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expenses</string>
    <string name="transaction">Transaction</string>
    <string name="menu_home">Home</string>
    <string name="menu_chart">Chart</string>
    <string name="chart_placeholder_title">Chart Schema Placeholder</string>
    <string name="chart_placeholder_desc">Your expense analytics will be displayed here as a chart.</string>
    <string name="chart_icon_description">Expense Chart</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_date">Date</string>
    <string name="menu_select_date_range">Select Date Range</string>
    <string name="menu_date_ascending">Date Ascending</string>
    <string name="menu_date_descending">Date Descending</string>
    <string name="menu_cash_in">Cash In</string>
    <string name="menu_cash_out">Cash Out</string>
    <string name="menu_print">Print</string>
    <string name="menu_your_name">Your Name</string>
    <string name="menu_address">Address</string>
    <string name="menu_report">Report</string>
    <string name="menu_pdf">PDF</string>
    <string name="menu_excel">Excel</string>
    <string name="export_options_description">Export options</string>
    <string name="menu_recommend">Recommend</string>
    <string name="menu_content_description">Menu</string>
    <string name="more_options_description">More options</string>
    <string name="search_expenses_hint">Search expenses...</string>
    <string name="remark_for">Notes for: %s</string>
    <string name="all_personal_notes">All Personal Notes:</string>
    <string name="archive_folder">Archive Notes:</string>
    <string name="deleted_notes_title">Deleted Notes:</string>
    <string name="no_deleted_notes">No deleted notes yet.</string>
    <string name="delete_success">Note moved to trash</string>
    <string name="no_archived_notes">No archived notes yet.</string>
    <string name="archive_success">Note moved to archive</string>
    <string name="no_notes_day">No notes for this day.</string>
    <string name="no_notes_saved">No notes saved yet.</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="prev_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="note_flag">Note Flag</string>
    <string name="deleted_notes_btn">Show Deleted Notes</string>
    <string name="archive_all_past_notes">Archive all past notes</string>
    <string name="clear_trash_btn">Clear All Deleted Notes</string>
    <string name="notification_icon">🔔</string>

    <!-- Categories -->
    <string name="category_title">Category</string>
    <string name="income_categories">Income Categories</string>
    <string name="expense_categories">Expense Categories</string>
    <string name="cat_air_tickets">Air Tickets</string>
    <string name="cat_auto_rickshaw">Auto Rickshaw</string>
    <string name="cat_bike">Bike</string>
    <string name="cat_bills">Bills</string>
    <string name="cat_cable_tv">Cable TV</string>
    <string name="cat_car">Car</string>
    <string name="cat_car_insurance">Car Insurance</string>
    <string name="cat_card_fee">Card Fee</string>
    <string name="cat_cigarette">Cigarette</string>
    <string name="cat_clothes">Clothes</string>
    <string name="cat_drinks">Drinks</string>
    <string name="cat_driver">Driver</string>
    <string name="cat_durables">Durables</string>
    <string name="cat_education">Education</string>
    <string name="cat_electricity">Electricity</string>
    <string name="cat_emi">EMI</string>
    <string name="cat_entertainment">Entertainment</string>
    <string name="cat_fast_food">Fast Food</string>
    <string name="cat_festivals">Festivals</string>
    <string name="cat_fitness">Fitness</string>
    <string name="cat_food">Food</string>
    <string name="cat_fruits_vegetables">Fruits &amp; Vegetables</string>
    <string name="cat_fuel">Fuel</string>
    <string name="cat_furniture">Furniture</string>
    <string name="cat_gas">Gas</string>
    <string name="cat_gifts">Gifts</string>
    <string name="cat_groceries">Groceries</string>
    <string name="cat_health">Health</string>
    <string name="cat_health_insurance">Health Insurance</string>
    <string name="cat_hobby">Hobby</string>
    <string name="cat_home_insurance">Home Insurance</string>
    <string name="cat_house_hold_expenses">House Hold Expenses</string>
    <string name="cat_insurance">Insurance</string>
    <string name="cat_internet">Internet</string>
    <string name="cat_investment_expense">Investment Expense</string>
    <string name="cat_kids">Kids</string>
    <string name="cat_laundry">Laundry</string>
    <string name="cat_maid_servant">Maid / Servant</string>
    <string name="cat_medicine">Medicine</string>
    <string name="cat_milk">Milk</string>
    <string name="cat_mobile">Mobile</string>
    <string name="cat_other_expense">Other Expense</string>
    <string name="cat_parking">Parking</string>
    <string name="cat_party">Party</string>
    <string name="cat_personal_grooming">Personal Grooming</string>
    <string name="cat_pet">Pet</string>
    <string name="cat_rent">Rent</string>
    <string name="cat_repair_maintenance">Repair &amp; Maintenace</string>
    <string name="cat_restaurant_hotel">Restaurant &amp; Hotel</string>
    <string name="cat_savings">Savings</string>
    <string name="cat_shopping">Shopping</string>
    <string name="cat_social">Social</string>
    <string name="cat_stationery">Stationery</string>
    <string name="cat_taxes">Taxes</string>
    <string name="cat_taxi">Taxi</string>
    <string name="cat_toiletries">Toiletries</string>
    <string name="cat_toll">Toll</string>
    <string name="cat_toys">Toys</string>
    <string name="cat_transportation">Transportation</string>
    <string name="cat_vacation">Vacation</string>
    <string name="cat_water">Water</string>

    <!-- Income Categories -->
    <string name="cat_salary">Salary</string>
    <string name="cat_bonus">Bonus</string>
    <string name="cat_business">Business</string>
    <string name="cat_investment_income">Investment Income</string>
    <string name="cat_other_income">Other Income</string>
</resources>